<?xml version="1.0"?>
<package format="2">
  <name>serial_logger</name>
  <version>0.0.0</version>
  <description>The serial_logger package</description>

  <maintainer email="jeremyxu1998@gmail.com">Jeremy Xu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <test_depend>roslint</test_depend>

</package>
